Start GUI redo